k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myprep
  namespace: myprep
  labels:
    app: myprep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myprep
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: myprep
        namespace: myprep
    spec:
      containers:
      - name: myprep
        image: <IMAGE>
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: myprep-service
  namespace: myprep
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
    # service.beta.kubernetes.io/do-loadbalancer-certificate-id: "14cf21de-04d0-4241-8b3e-9b79575a3d09"
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: LoadBalancer
  ports:
    - name: https
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: myprep
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myprep
  namespace: myprep
spec:
  rules:
  - host: interviewstudyguide.com
    http:
      paths:
      - backend:
          serviceName: myprep-service
          servicePort: 3000
        path: /
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  # - hosts:
  #   - interviewstudyguide.com
  #   secretName: example-tls
